# Anisebot

./: .env  .env.dev  .env.onebot11  .env.prod  .env.red  LICENSE  README.md  bot.py  poetry_build_env.bat  pyproject.toml  requirements.txt  runbot.bat  venv_build_env.bat  venv_runbot.bat  安装依赖.bat
anise_bot/: __init__.py  service.py
anise_bot/plugins/: broadcast.py  pokeback.py
anise_bot/plugins/anise_none/: __init__.py  config.py  update.py
anise_bot/plugins/anise_none/anise/: README.md  config.py  manager.py  object.py  pyproject.toml  resource.py  run.py
anise_bot/plugins/anise_none/anise/query/: __init__.py  alias.py  set.py
anise_bot/plugins/anise_none/models/: worldflipper.py
anise_bot/plugins/anise_none/plugins/gacha/: handler.py
anise_bot/plugins/anise_none/plugins/query/: __init__.py  handler.py  query.py
anise_bot/plugins/anise_none/plugins/query/utils/: __init__.py  playw.py  update.py
anise_bot/plugins/anise_none/utils/: __init__.py  playw.py
anise_bot/plugins/backups/query/: __init__.py  query.py  sets.py
anise_bot/plugins/gacha/: __init__.py  gacha.py
anise_bot/plugins/query/: __init__.py  query.py  sets.py  test.py
anise_bot/plugins/worldflipper/: __init__.py  config.py
anise_bot/plugins/worldflipper/plugins/: manager.py
anise_bot/plugins/worldflipper/plugins/gacha/: __init__.py  gacha.py
anise_bot/plugins/worldflipper/plugins/query/: __init__.py  query.py
anise_bot/plugins/worldflipper/plugins/schedule/: __init__.py  html_util.py  schedule.py
anise_bot/utils/: __init__.py  dao.py
anise_core/: __init__.py  object.py  statistic.py
anise_core/worldflipper/: __init__.py  config_default.toml  manager.py  playw.py  roster.py
anise_core/worldflipper/object/: __init__.py
anise_core/worldflipper/utils/: gif.py  schedule.py  update.py  wf2anise.json  wikipage.py
anise_utils/: aa.py
config/: message_contents.json
config/gacha/pool/: default.json
doc/: botConnect-GoCq.md  botConnect-Mirai.md
