[tool.poetry]
name = "anisebot"
version = "0.1.1"
description = "anisebot"
authors = ["Gomacker"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0"}
nonebot-adapter-onebot = "^2.2.3"
pillow = "^9.5.0"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]
nb-cli = "^1.1.2"


[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["anise_bot/plugins"]
builtin_plugins = []

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
